--- a/add-product.html
+++ b/add-product.html
@@ -8,7 +8,7 @@
     <title>
       brand deal
     </title>
-    <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon"/>
+    <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon"/>
     <link rel="stylesheet" href="assets/css/lib/animate.css" />
     <link rel="stylesheet" href="assets/css/lib/bootstrap-rtl.min.css" />
     <link rel="stylesheet" href="assets/css/lib/swiper-bundle.min.css" />
@@ -208,13 +208,13 @@
               <ul class="nav nav-pills" id="pills-tab" role="tablist">
                 <li class="nav-item" role="presentation">
                   <a class="nav-link active" id="pills-home-tab" data-toggle="pill" href="#pills-home" role="tab" aria-controls="pills-home" aria-selected="true">
-                    عرض بالمزاد لعرض المنتج بالمزاد
+                    عرض بيع بالمزاد
                   </a>
                 </li>
 
                 <li class="nav-item" role="presentation">
                   <a class="nav-link" id="pills-profile-tab" data-toggle="pill" href="#pills-profile" role="tab" aria-controls="pills-profile" aria-selected="false">
-                    عرض بسعر ثابت لعرض المنتج بسعر محدد للبيع
+                   عرض بسعر محدد
                   </a>
                 </li>
               </ul>
@@ -710,7 +710,7 @@
               <ul class="socail-media">
                 <li>
                   <a href="#">
-                    <img src="assets/images/icons/facebook.svg" loading="lazy" alt="" />
+                    <img src="assets/images/icons/snapchat.svg" loading="lazy" alt="" />
                   </a>
                 </li>
 
@@ -728,7 +728,13 @@
 
                 <li>
                   <a href="#">
-                    <img src="assets/images/icons/youtube.svg" loading="lazy" alt="" />
+                    <img src="assets/images/icons/whatsapp.svg" loading="lazy" alt="" />
+                  </a>
+                </li>
+
+                <li>
+                  <a href="#">
+                    <img src="assets/images/icons/message.svg" loading="lazy" alt="" />
                   </a>
                 </li>
               </ul>
@@ -831,6 +837,10 @@
         </div>
       </div>
     </div>
+
+    <a href="#" class="fixed-icon">
+      <img src="assets/images/icons/whatsapp.svg" loading="lazy" alt="" />
+    </a>
 
     <script src="assets/js/lib/jquery4.js"></script>
     <script src="assets/js/lib/jquery-ui.min.js"></script>
