--- a/auction.html
+++ b/auction.html
@@ -8,7 +8,7 @@
     <title>
       brand deal
     </title>
-    <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon"/>
+    <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon"/>
     <link rel="stylesheet" href="assets/css/lib/animate.css" />
     <link rel="stylesheet" href="assets/css/lib/bootstrap-rtl.min.css" />
     <link rel="stylesheet" href="assets/css/lib/swiper-bundle.min.css" />
@@ -306,7 +306,7 @@
 
             <div class="col-lg-9 col-12">
               <div class="row">
-                <div class="col-lg-9 col-12 mb-5">
+                <div class="col-lg-8 col-10 mb-5">
                   <form class="form-search">
                     <div class="form-group">
                       <input type="text" class="form-control" placeholder="ابحث هنا.. " />
@@ -340,6 +340,46 @@
                       </a>
                     </li>
                   </ul>
+                </div>
+
+                <div class="col-lg-1 col-2 mb-5">
+                  <div class="sort-contain">
+                    <button class="sort-icon" type="button">
+                      <img src="assets/images/icons/sort.svg" loading="lazy" alt="" />
+                    </button>
+
+                    <ul class="sort-list">
+                      <li>
+                        <a href="#">
+                          الافتراضي
+                        </a>
+                      </li>
+
+                      <li>
+                        <a href="#">
+                          حسب السعر الأعلى
+                        </a>
+                      </li>
+
+                      <li>
+                        <a href="#">
+                          حسب السعر الأدنى
+                        </a>
+                      </li>
+
+                      <li>
+                        <a href="#">
+                          حسب التاريخ الأحدث
+                        </a>
+                      </li>
+
+                      <li>
+                        <a href="#">
+                          حسب التاريخ الأقدم
+                        </a>
+                      </li>
+                    </ul>
+                  </div>
                 </div>
 
                 <div class="col-lg-4 col-6 mb-3 column">
@@ -710,7 +750,7 @@
               <ul class="socail-media">
                 <li>
                   <a href="#">
-                    <img src="assets/images/icons/facebook.svg" loading="lazy" alt="" />
+                    <img src="assets/images/icons/snapchat.svg" loading="lazy" alt="" />
                   </a>
                 </li>
 
@@ -728,7 +768,13 @@
 
                 <li>
                   <a href="#">
-                    <img src="assets/images/icons/youtube.svg" loading="lazy" alt="" />
+                    <img src="assets/images/icons/whatsapp.svg" loading="lazy" alt="" />
+                  </a>
+                </li>
+
+                <li>
+                  <a href="#">
+                    <img src="assets/images/icons/message.svg" loading="lazy" alt="" />
                   </a>
                 </li>
               </ul>
@@ -805,6 +851,10 @@
         </div>
       </div>
     </footer>
+
+    <a href="#" class="fixed-icon">
+      <img src="assets/images/icons/whatsapp.svg" loading="lazy" alt="" />
+    </a>
 
     <script src="assets/js/lib/jquery4.js"></script>
     <script src="assets/js/lib/jquery-ui.min.js"></script>
