--- a/new-products.html
+++ b/new-products.html
@@ -8,7 +8,7 @@
     <title>
       brand deal
     </title>
-    <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon"/>
+    <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon"/>
     <link rel="stylesheet" href="assets/css/lib/animate.css" />
     <link rel="stylesheet" href="assets/css/lib/bootstrap-rtl.min.css" />
     <link rel="stylesheet" href="assets/css/lib/swiper-bundle.min.css" />
@@ -937,7 +937,7 @@
               <ul class="socail-media">
                 <li>
                   <a href="#">
-                    <img src="assets/images/icons/facebook.svg" loading="lazy" alt="" />
+                    <img src="assets/images/icons/snapchat.svg" loading="lazy" alt="" />
                   </a>
                 </li>
 
@@ -955,7 +955,13 @@
 
                 <li>
                   <a href="#">
-                    <img src="assets/images/icons/youtube.svg" loading="lazy" alt="" />
+                    <img src="assets/images/icons/whatsapp.svg" loading="lazy" alt="" />
+                  </a>
+                </li>
+
+                <li>
+                  <a href="#">
+                    <img src="assets/images/icons/message.svg" loading="lazy" alt="" />
                   </a>
                 </li>
               </ul>
@@ -1032,6 +1038,10 @@
         </div>
       </div>
     </footer>
+
+    <a href="#" class="fixed-icon">
+      <img src="assets/images/icons/whatsapp.svg" loading="lazy" alt="" />
+    </a>
 
     <script src="assets/js/lib/jquery4.js"></script>
     <script src="assets/js/lib/jquery-ui.min.js"></script>
