--- a/profile.html
+++ b/profile.html
@@ -8,7 +8,7 @@
     <title>
       brand deal
     </title>
-    <link rel="shortcut icon" href="assets/images/logo.png" type="image/x-icon"/>
+    <link rel="shortcut icon" href="assets/images/favicon.ico" type="image/x-icon"/>
     <link rel="stylesheet" href="assets/css/lib/animate.css" />
     <link rel="stylesheet" href="assets/css/lib/bootstrap-rtl.min.css" />
     <link rel="stylesheet" href="assets/css/lib/swiper-bundle.min.css" />
@@ -277,14 +277,14 @@
                         <div class="col-lg-6 col-12">
                           <div class="from-group">
                             <img src="assets/images/form/user.svg" loading="lazy" alt="" />
-                            <input type="text" class="form-control" placeholder="الإسم الأول " />
+                            <input type="text" class="form-control" value="محمد" placeholder="الإسم الأول " />
                           </div>
                         </div>
 
                         <div class="col-lg-6 col-12">
                           <div class="from-group">
                             <img src="assets/images/form/user.svg" loading="lazy" alt="" />
-                            <input type="text" class="form-control" placeholder="الإسم الأخير " />
+                            <input type="text" class="form-control" value="احمد اسماعيل" placeholder="الإسم الأخير " />
                           </div>
                         </div>
 
@@ -689,7 +689,7 @@
               <ul class="socail-media">
                 <li>
                   <a href="#">
-                    <img src="assets/images/icons/facebook.svg" loading="lazy" alt="" />
+                    <img src="assets/images/icons/snapchat.svg" loading="lazy" alt="" />
                   </a>
                 </li>
 
@@ -707,7 +707,13 @@
 
                 <li>
                   <a href="#">
-                    <img src="assets/images/icons/youtube.svg" loading="lazy" alt="" />
+                    <img src="assets/images/icons/whatsapp.svg" loading="lazy" alt="" />
+                  </a>
+                </li>
+
+                <li>
+                  <a href="#">
+                    <img src="assets/images/icons/message.svg" loading="lazy" alt="" />
                   </a>
                 </li>
               </ul>
@@ -810,6 +816,10 @@
         </div>
       </div>
     </div>
+
+    <a href="#" class="fixed-icon">
+      <img src="assets/images/icons/whatsapp.svg" loading="lazy" alt="" />
+    </a>
 
     <script src="assets/js/lib/jquery4.js"></script>
     <script src="assets/js/lib/jquery-ui.min.js"></script>
