add charage - how work - payment - policy - questions - return policy - terms condtion pages

--- a/questions.html
+++ b/questions.html
@@ -127,7 +127,7 @@
         </li>
 
         <li class="nav-item">
-          <a href="about-us.html" class="nav-link active">
+          <a href="about-us.html" class="nav-link">
             من نحن
           </a>
         </li>
@@ -181,7 +181,7 @@
         <div class="container">
           <div class="contain">
             <h1>
-              من نحن
+              الاسئلة الشائعة
             </h1>
 
             <ul class="breadcurmb-data">
@@ -193,7 +193,7 @@
 
               <li>
                 <span>
-                  من نحن
+                  الاسئلة الشائعة
                 </span>
               </li>
             </ul>
@@ -201,125 +201,117 @@
         </div>
       </section>
 
-      <section class="about-us general-section">
+      <section class="questions general-section">
         <div class="container">
-          <div class="row">
-            <div class="col-lg-6 col-12 mb-4">
-              <div class="contain">
-                <div class="brand-name">
-                  <img src="assets/images/logo/footer_logo.webp" loading="lazy" alt="" />
+          <div class="accordion" id="accordionExample">
+            <div class="row">
+              <div class="col-lg-6 col-12 mb-4">
+                <div class="card">
+                  <div class="card-header" id="headingOne">
+                    <h2 class="mb-0">
+                      <button class="btn btn-link btn-block text-right" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        كيف عملية الدفع ?
+                      </button>
+                    </h2>
+                  </div>
+              
+                  <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+                    <div class="card-body">
+                      <p>
+                        طرق الدفع عربون والباقي عند الاستلام، أو التحويل البنكي ويتم توصيلها إلى موقعكم أو بالوكالة
+                      </p>
+                    </div>
+                  </div>
                 </div>
 
-                <h1>
-                  من نحن
-                </h1>
+                <div class="card">
+                  <div class="card-header" id="headingTwo">
+                    <h2 class="mb-0">
+                      <button class="btn btn-link btn-block text-right collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                        كيف عملية الدفع ?
+                      </button>
+                    </h2>
+                  </div>
+                  <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+                    <div class="card-body">
+                      <p>
+                        طرق الدفع عربون والباقي عند الاستلام، أو التحويل البنكي ويتم توصيلها إلى موقعكم أو بالوكالة
+                      </p>
+                    </div>
+                  </div>
+                </div>
 
-                <p>
-                  منصه سعودية مرخصه تتيح للافراد بيع الساعات و المجوهرات العالمية بسرعه و بقيمة عادل
-                </p>
+                <div class="card">
+                  <div class="card-header" id="headingThree">
+                    <h2 class="mb-0">
+                      <button class="btn btn-link btn-block text-right collapsed" type="button" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                        كيف عملية الدفع ?
+                      </button>
+                    </h2>
+                  </div>
+                  <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+                    <div class="card-body">
+                      <p>
+                        طرق الدفع عربون والباقي عند الاستلام، أو التحويل البنكي ويتم توصيلها إلى موقعكم أو بالوكالة
+                      </p>
+                    </div>
+                  </div>
+                </div>
               </div>
-            </div>
 
-            <div class="col-lg-6 col-12 mb-4">
-              <div class="image-content">
-                <img src="assets/images/products/watch.webp" loading="lazy" alt="" />
+              <div class="col-lg-6 col-12 mb-4">
+                <div class="card">
+                  <div class="card-header" id="heading4">
+                    <h2 class="mb-0">
+                      <button class="btn btn-link btn-block text-right" type="button" data-toggle="collapse" data-target="#collapse4" aria-expanded="false" aria-controls="collapseOne">
+                        كيف عملية الدفع ?
+                      </button>
+                    </h2>
+                  </div>
+              
+                  <div id="collapse4" class="collapse" aria-labelledby="heading4" data-parent="#accordionExample">
+                    <div class="card-body">
+                      <p>
+                        طرق الدفع عربون والباقي عند الاستلام، أو التحويل البنكي ويتم توصيلها إلى موقعكم أو بالوكالة
+                      </p>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="card">
+                  <div class="card-header" id="heading5">
+                    <h2 class="mb-0">
+                      <button class="btn btn-link btn-block text-right collapsed" type="button" data-toggle="collapse" data-target="#collapse5" aria-expanded="false" aria-controls="collapseTwo">
+                        كيف عملية الدفع ?
+                      </button>
+                    </h2>
+                  </div>
+                  <div id="collapse5" class="collapse" aria-labelledby="heading5" data-parent="#accordionExample">
+                    <div class="card-body">
+                      <p>
+                        طرق الدفع عربون والباقي عند الاستلام، أو التحويل البنكي ويتم توصيلها إلى موقعكم أو بالوكالة
+                      </p>
+                    </div>
+                  </div>
+                </div>
+
+                <div class="card">
+                  <div class="card-header" id="heading6">
+                    <h2 class="mb-0">
+                      <button class="btn btn-link btn-block text-right collapsed" type="button" data-toggle="collapse" data-target="#collapse6" aria-expanded="false" aria-controls="collapse6">
+                        كيف عملية الدفع ?
+                      </button>
+                    </h2>
+                  </div>
+                  <div id="collapse6" class="collapse" aria-labelledby="heading6" data-parent="#accordionExample">
+                    <div class="card-body">
+                      <p>
+                        طرق الدفع عربون والباقي عند الاستلام، أو التحويل البنكي ويتم توصيلها إلى موقعكم أو بالوكالة
+                      </p>
+                    </div>
+                  </div>
+                </div>
               </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="why general-section">
-        <div class="container">
-          <div class="heading">
-            <h1>
-              لماذا براند ديل؟
-            </h1>
-          </div>
-
-          <div class="row">
-            <div class="col-lg-3 col-12 mb-3">
-              <div class="box">
-                <h2>
-                  فحص آمن مع توصيل سريع
-                </h2>
-              </div>
-            </div>
-
-            <div class="col-lg-3 col-12 mb-3">
-              <div class="box">
-                <h2>
-                  فاتورة لانتقال ملكية القطعة
-                </h2>
-              </div>
-            </div>
-
-            <div class="col-lg-3 col-12 mb-3">
-              <div class="box">
-                <h2>
-                  تواصل مباشر مع العميل مع حفظ الخصوصية
-                </h2>
-              </div>
-            </div>
-
-            <div class="col-lg-3 col-12 mb-3">
-              <div class="box">
-                <h2>
-                  الحماية من المغالاة بالسعر
-                </h2>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="work general-section">
-        <div class="container">
-          <div class="heading">
-            <h1>
-              كيف يعمل براند ديل؟
-            </h1>
-          </div>
-
-          <div class="flex-data">
-            <div class="box">
-              <img src="assets/images/works/work_1.webp" loading="lazy" alt="" />
-
-              <h2>
-                نستلم المنتج من البائع
-              </h2>
-            </div>
-
-            <div class="box">
-              <img src="assets/images/works/work_2.webp" loading="lazy" alt="" />
-
-              <h2>
-                نتأكد من أصالته ومطابقته للمواصفات
-              </h2>
-            </div>
-
-            <div class="box">
-              <img src="assets/images/works/work_3.webp" loading="lazy" alt="" />
-
-              <h2>
-                نقوم بتغليفه وتعقيمه
-              </h2>
-            </div>
-
-            <div class="box">
-              <img src="assets/images/works/work_4.webp" loading="lazy" alt="" />
-
-              <h2>
-                نوصله إلى المشتري
-              </h2>
-            </div>
-
-            <div class="box">
-              <img src="assets/images/works/work_5.webp" loading="lazy" alt="" />
-
-              <h2>
-                نحول المبلغ إلى البائع
-              </h2>
             </div>
           </div>
         </div>
@@ -450,7 +442,6 @@
 
     <script src="assets/js/lib/jquery4.js"></script>
     <script src="assets/js/lib/jquery-ui.min.js"></script>
-    <script src="assets/js/lib/jquery.ui.slider-rtl.min.js"></script>
     <script src="assets/js/lib/popper.js"></script>
     <script src="assets/js/lib/bootstrap.js"></script>
     <script src="assets/js/lib/swiper-bundle.min.js"></script>
