--- a/return-policy.html
+++ b/return-policy.html
@@ -127,7 +127,7 @@
         </li>
 
         <li class="nav-item">
-          <a href="about-us.html" class="nav-link active">
+          <a href="about-us.html" class="nav-link">
             من نحن
           </a>
         </li>
@@ -181,7 +181,7 @@
         <div class="container">
           <div class="contain">
             <h1>
-              من نحن
+              سياسه الاسترجاع
             </h1>
 
             <ul class="breadcurmb-data">
@@ -193,7 +193,7 @@
 
               <li>
                 <span>
-                  من نحن
+                  سياسه الاسترجاع
                 </span>
               </li>
             </ul>
@@ -201,125 +201,19 @@
         </div>
       </section>
 
-      <section class="about-us general-section">
+      <section class="terms general-section">
         <div class="container">
           <div class="row">
-            <div class="col-lg-6 col-12 mb-4">
+            <div class="col-12 mx-auto">
               <div class="contain">
-                <div class="brand-name">
-                  <img src="assets/images/logo/footer_logo.webp" loading="lazy" alt="" />
-                </div>
-
                 <h1>
-                  من نحن
+                  سياسه الاسترجاع
                 </h1>
 
                 <p>
-                  منصه سعودية مرخصه تتيح للافراد بيع الساعات و المجوهرات العالمية بسرعه و بقيمة عادل
+                  هنالك العديد من الأنواع المتوفرة لنصوص لوريم إيبسوم، ولكن الغالبية تم تعديلها بشكل ما عبر إدخال بعض النوادر أو الكلمات العشوائية إلى النص. إن كنت تريد أن تستخدم نص لوريم إيبسوم ما، عليك أن تتحقق أولاً أن ليس هناك أي كلمات أو عبارات محرجة أو غير لائقة مخبأة في هذا النص. بينما تعمل جميع مولّدات نصوص لوريم إيبسوم على الإنترنت على إعادة تكرار مقاطع من نص لوريم إيبسوم نفسه عدة مرات بما تتطلبه الحاجة، يقوم مولّدنا هذا باستخدام كلمات من قاموس يحوي على أكثر من 200 كلمة لا تينية، مضاف إليها مجموعة من الجمل النموذجية، لتكوين نص لوريم إيبسوم ذو شكل منطقي قريب إلى النص الحقيقي. وبالتالي يكون النص الناتح خالي من التكرار، أو أي كلمات أو عبارات غير لائقة أو ما شابه. وهذا ما يجعله أول مولّد نص لوريم إيبسوم حقيقي على الإنترنت.هنالك العديد من الأنواع المتوفرة لنصوص لوريم إيبسوم، ولكن الغالبية تم تعديلها بشكل ما عبر إدخال بعض النوادر أو الكلمات العشوائية إلى النص. إن كنت تريد أن تستخدم نص لوريم إيبسوم ما، عليك أن تتحقق أولاً أن ليس هناك أي كلمات أو عبارات محرجة أو غير لائقة مخبأة في هذا النص. بينما تعمل جميع مولّدات نصوص لوريم إيبسوم على الإنترنت على إعادة تكرار مقاطع من نص لوريم إيبسوم نفسه عدة مرات بما تتطلبه الحاجة، يقوم مولّدنا هذا باستخدام كلمات من قاموس يحوي على أكثر من 200 كلمة لا تينية، مضاف إليها مجموعة من الجمل النموذجية، لتكوين نص لوريم إيبسوم ذو شكل منطقي قريب إلى النص الحقيقي. وبالتالي يكون النص الناتح خالي من التكرار، أو أي كلمات أو عبارات غير لائقة أو ما شابه. وهذا ما يجعله أول مولّد نص لوريم إيبسوم حقيقي على الإنترنت.هنالك العديد من الأنواع المتوفرة لنصوص لوريم إيبسوم، ولكن الغالبية تم تعديلها بشكل ما عبر إدخال بعض النوادر أو الكلمات العشوائية إلى النص. إن كنت تريد أن تستخدم نص لوريم إيبسوم ما، عليك أن تتحقق أولاً أن ليس هناك أي كلمات أو عبارات محرجة أو غير لائقة مخبأة في هذا النص. بينما تعمل جميع مولّدات نصوص لوريم إيبسوم على الإنترنت على إعادة تكرار مقاطع من نص لوريم إيبسوم نفسه عدة مرات بما تتطلبه الحاجة، يقوم مولّدنا هذا باستخدام كلمات من قاموس يحوي على أكثر من 200 كلمة لا تينية، مضاف إليها مجموعة من الجمل النموذجية، لتكوين نص لوريم إيبسوم ذو شكل منطقي قريب إلى النص الحقيقي. وبالتالي يكون النص الناتح خالي من التكرار، أو أي كلمات أو عبارات غير لائقة أو ما شابه. وهذا ما يجعله أول مولّد نص لوريم إيبسوم حقيقي على الإنترنت.
                 </p>
               </div>
-            </div>
-
-            <div class="col-lg-6 col-12 mb-4">
-              <div class="image-content">
-                <img src="assets/images/products/watch.webp" loading="lazy" alt="" />
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="why general-section">
-        <div class="container">
-          <div class="heading">
-            <h1>
-              لماذا براند ديل؟
-            </h1>
-          </div>
-
-          <div class="row">
-            <div class="col-lg-3 col-12 mb-3">
-              <div class="box">
-                <h2>
-                  فحص آمن مع توصيل سريع
-                </h2>
-              </div>
-            </div>
-
-            <div class="col-lg-3 col-12 mb-3">
-              <div class="box">
-                <h2>
-                  فاتورة لانتقال ملكية القطعة
-                </h2>
-              </div>
-            </div>
-
-            <div class="col-lg-3 col-12 mb-3">
-              <div class="box">
-                <h2>
-                  تواصل مباشر مع العميل مع حفظ الخصوصية
-                </h2>
-              </div>
-            </div>
-
-            <div class="col-lg-3 col-12 mb-3">
-              <div class="box">
-                <h2>
-                  الحماية من المغالاة بالسعر
-                </h2>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="work general-section">
-        <div class="container">
-          <div class="heading">
-            <h1>
-              كيف يعمل براند ديل؟
-            </h1>
-          </div>
-
-          <div class="flex-data">
-            <div class="box">
-              <img src="assets/images/works/work_1.webp" loading="lazy" alt="" />
-
-              <h2>
-                نستلم المنتج من البائع
-              </h2>
-            </div>
-
-            <div class="box">
-              <img src="assets/images/works/work_2.webp" loading="lazy" alt="" />
-
-              <h2>
-                نتأكد من أصالته ومطابقته للمواصفات
-              </h2>
-            </div>
-
-            <div class="box">
-              <img src="assets/images/works/work_3.webp" loading="lazy" alt="" />
-
-              <h2>
-                نقوم بتغليفه وتعقيمه
-              </h2>
-            </div>
-
-            <div class="box">
-              <img src="assets/images/works/work_4.webp" loading="lazy" alt="" />
-
-              <h2>
-                نوصله إلى المشتري
-              </h2>
-            </div>
-
-            <div class="box">
-              <img src="assets/images/works/work_5.webp" loading="lazy" alt="" />
-
-              <h2>
-                نحول المبلغ إلى البائع
-              </h2>
             </div>
           </div>
         </div>
@@ -450,7 +344,6 @@
 
     <script src="assets/js/lib/jquery4.js"></script>
     <script src="assets/js/lib/jquery-ui.min.js"></script>
-    <script src="assets/js/lib/jquery.ui.slider-rtl.min.js"></script>
     <script src="assets/js/lib/popper.js"></script>
     <script src="assets/js/lib/bootstrap.js"></script>
     <script src="assets/js/lib/swiper-bundle.min.js"></script>
