--- a/add-product.html
+++ b/add-product.html
@@ -133,7 +133,7 @@
         </li>
 
          <li class="nav-item">
-          <a href="about-us.html" class="nav-link">
+          <a href="how-work.html" class="nav-link">
             كيف نعمل
           </a>
         </li>
@@ -749,25 +749,25 @@
 
               <ul class="links">
                 <li>
-                  <a href="#">
+                  <a href="about-us.html">
                     من نحن
                   </a>
                 </li>
 
                 <li>
-                  <a href="#">
+                  <a href="questions.html">
                     الأسئلة الشائعة
                   </a>
                 </li>
 
                 <li>
-                  <a href="#">
+                  <a href="terms-condtions.html">
                     الشروط والأحكام
                   </a>
                 </li>
 
                 <li>
-                  <a href="#">
+                  <a href="policy.html">
                     سياسة الخصوصية
                   </a>
                 </li>
@@ -783,19 +783,19 @@
 
               <ul class="links">
                 <li>
-                  <a href="#">
+                  <a href="payment.html">
                     طريقة الدفع
                   </a>
                 </li>
 
                 <li>
-                  <a href="#">
+                  <a href="return-policy.html">
                     سياسة الاسترجاع
                   </a>
                 </li>
 
                 <li>
-                  <a href="#">
+                  <a href="charge.html">
                     الشحن
                   </a>
                 </li>
