--- a/how-work.html
+++ b/how-work.html
@@ -127,13 +127,13 @@
         </li>
 
         <li class="nav-item">
-          <a href="about-us.html" class="nav-link active">
+          <a href="about-us.html" class="nav-link">
             من نحن
           </a>
         </li>
 
-         <li class="nav-item">
-          <a href="how-work.html" class="nav-link">
+        <li class="nav-item">
+          <a href="how-work.html" class="nav-link active">
             كيف نعمل
           </a>
         </li>
@@ -181,7 +181,7 @@
         <div class="container">
           <div class="contain">
             <h1>
-              من نحن
+              كيف نعمل ؟
             </h1>
 
             <ul class="breadcurmb-data">
@@ -193,7 +193,7 @@
 
               <li>
                 <span>
-                  من نحن
+                  كيف نعمل ؟
                 </span>
               </li>
             </ul>
@@ -201,125 +201,33 @@
         </div>
       </section>
 
-      <section class="about-us general-section">
+      <section class="terms general-section">
         <div class="container">
           <div class="row">
-            <div class="col-lg-6 col-12 mb-4">
+            <div class="col-12 mx-auto">
               <div class="contain">
-                <div class="brand-name">
-                  <img src="assets/images/logo/footer_logo.webp" loading="lazy" alt="" />
-                </div>
-
                 <h1>
-                  من نحن
+                  كيف نعمل ؟
                 </h1>
 
-                <p>
-                  منصه سعودية مرخصه تتيح للافراد بيع الساعات و المجوهرات العالمية بسرعه و بقيمة عادل
-                </p>
+                <ul>
+                  <li>
+                    نستلم القطعة من البائع مع فحصها بشكل دقيق للتأكد والتيقن من أصالة المنتج
+                  </li>
+
+                  <li>
+                    نفحص القطعة من ناحية الأعطال والصيانة لضمان حق المشتري
+                  </li>
+                  
+                  <li>
+                    تعقيم المنتج مع إعادة تأهيله
+                  </li>
+
+                  <li>
+                    توصيل المنتج إلى المشتري
+                  </li>
+                </ul>
               </div>
-            </div>
-
-            <div class="col-lg-6 col-12 mb-4">
-              <div class="image-content">
-                <img src="assets/images/products/watch.webp" loading="lazy" alt="" />
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="why general-section">
-        <div class="container">
-          <div class="heading">
-            <h1>
-              لماذا براند ديل؟
-            </h1>
-          </div>
-
-          <div class="row">
-            <div class="col-lg-3 col-12 mb-3">
-              <div class="box">
-                <h2>
-                  فحص آمن مع توصيل سريع
-                </h2>
-              </div>
-            </div>
-
-            <div class="col-lg-3 col-12 mb-3">
-              <div class="box">
-                <h2>
-                  فاتورة لانتقال ملكية القطعة
-                </h2>
-              </div>
-            </div>
-
-            <div class="col-lg-3 col-12 mb-3">
-              <div class="box">
-                <h2>
-                  تواصل مباشر مع العميل مع حفظ الخصوصية
-                </h2>
-              </div>
-            </div>
-
-            <div class="col-lg-3 col-12 mb-3">
-              <div class="box">
-                <h2>
-                  الحماية من المغالاة بالسعر
-                </h2>
-              </div>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section class="work general-section">
-        <div class="container">
-          <div class="heading">
-            <h1>
-              كيف يعمل براند ديل؟
-            </h1>
-          </div>
-
-          <div class="flex-data">
-            <div class="box">
-              <img src="assets/images/works/work_1.webp" loading="lazy" alt="" />
-
-              <h2>
-                نستلم المنتج من البائع
-              </h2>
-            </div>
-
-            <div class="box">
-              <img src="assets/images/works/work_2.webp" loading="lazy" alt="" />
-
-              <h2>
-                نتأكد من أصالته ومطابقته للمواصفات
-              </h2>
-            </div>
-
-            <div class="box">
-              <img src="assets/images/works/work_3.webp" loading="lazy" alt="" />
-
-              <h2>
-                نقوم بتغليفه وتعقيمه
-              </h2>
-            </div>
-
-            <div class="box">
-              <img src="assets/images/works/work_4.webp" loading="lazy" alt="" />
-
-              <h2>
-                نوصله إلى المشتري
-              </h2>
-            </div>
-
-            <div class="box">
-              <img src="assets/images/works/work_5.webp" loading="lazy" alt="" />
-
-              <h2>
-                نحول المبلغ إلى البائع
-              </h2>
             </div>
           </div>
         </div>
@@ -450,7 +358,6 @@
 
     <script src="assets/js/lib/jquery4.js"></script>
     <script src="assets/js/lib/jquery-ui.min.js"></script>
-    <script src="assets/js/lib/jquery.ui.slider-rtl.min.js"></script>
     <script src="assets/js/lib/popper.js"></script>
     <script src="assets/js/lib/bootstrap.js"></script>
     <script src="assets/js/lib/swiper-bundle.min.js"></script>
