--- a/profile.html
+++ b/profile.html
@@ -341,14 +341,14 @@
                         <div class="col-lg-6 col-12">
                           <div class="from-group">
                             <img src="assets/images/form/user.svg" loading="lazy" alt="" />
-                            <input type="text" class="form-control" value="محمد" placeholder="الإسم الأول " />
+                            <input type="text" class="form-control" placeholder="الإسم الأول " />
                           </div>
                         </div>
 
                         <div class="col-lg-6 col-12">
                           <div class="from-group">
                             <img src="assets/images/form/user.svg" loading="lazy" alt="" />
-                            <input type="text" class="form-control" value="احمد اسماعيل" placeholder="الإسم الأخير " />
+                            <input type="text" class="form-control" placeholder="الإسم الأخير " />
                           </div>
                         </div>
 
