--- a/products.html
+++ b/products.html
@@ -204,8 +204,12 @@
       <section class="products general-section">
         <div class="container">
           <div class="row">
-            <div class="col-lg-3 col-12 mb-3 px-0">
+            <div class="col-lg-3 col-12 mb-3 px-0 mobile-filter">
               <div class="category-filter">
+                <div class="close-icon">
+                  <img src="assets/images/icons/close.svg" loading="lazy" alt="" />
+                </div>
+                
                 <h1 class="category-head">
                   فرز
                 </h1>
@@ -497,7 +501,7 @@
 
             <div class="col-lg-9 col-12">
               <div class="row">
-                <div class="col-lg-8 col-10 mb-5">
+                <div class="col-lg-8 col-9 mb-3">
                   <form class="form-search">
                     <div class="form-group">
                       <input type="text" class="form-control" placeholder="ابحث هنا.. " />
@@ -511,7 +515,7 @@
                   </form>
                 </div>
 
-                <div class="col-lg-3 col-12 mb-5 mobile-hidden">
+                <div class="col-lg-3 col-12 mb-3 mobile-hidden">
                   <ul class="grid-view-btn" id="btnContainer">
                     <li>
                       <a href="#" class="grid-btn list" type="button">
@@ -533,7 +537,7 @@
                   </ul>
                 </div>
 
-                <div class="col-lg-1 col-2 mb-5">
+                <div class="col-lg-1 col-1 mb-3 px-0">
                   <div class="sort-contain">
                     <button class="sort-icon" type="button">
                       <img src="assets/images/icons/sort.svg" loading="lazy" alt="" />
@@ -570,6 +574,12 @@
                         </a>
                       </li>
                     </ul>
+                  </div>
+                </div>
+
+                <div class="col-1 mobile-only mb-3">
+                  <div class="filter-icon">
+                    <img src="assets/images/icons/filter.svg" loading="lazy" alt="" />
                   </div>
                 </div>
 
