--- a/profile.html
+++ b/profile.html
@@ -204,11 +204,137 @@
       <section class="profile general-section">
         <div class="container">
           <div class="row">
-            <!-- <div class="filter-icon">
-              <img src="assets/images/icons/sort.svg" loading="lazy" alt="" />
-            </div> -->
+            <div class="filter-icon mb-3">
+              <img src="assets/images/icons/filter.svg" loading="lazy" alt="" />
+            </div>
 
-            <div class="col-lg-3 col-12 mb-4">
+            <div class="profile-mobile-view">
+              <div class="close-icon">
+                <img src="assets/images/icons/close.svg" loading="lazy" alt="" />
+              </div>
+
+              <div class="image-content">
+                <img src="assets/images/man.png" loading="lazy" alt="" />
+              </div>
+
+              <h1>
+                بدر محمد
+              </h1>
+
+              <ul class="nav nav-tabs" id="myTab" role="tablist">
+                <li class="nav-item" role="presentation">
+                  <a class="nav-link active" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="true">
+                    <img src="assets/images/form/user.svg" loading="lazy" alt="" />
+
+                    <span>
+                      ملفي الشخصي
+                    </span>
+                  </a>
+                </li>
+
+                <li class="nav-item" role="presentation">
+                  <a class="nav-link" id="password-tab" data-toggle="tab" href="#password" role="tab" aria-controls="password" aria-selected="false">
+                    <img src="assets/images/form/password.svg" loading="lazy" alt="" />
+
+                    <span>
+                      تغيير كلمة المرور
+                    </span>
+                  </a>
+                </li>
+
+                <li class="nav-item" role="presentation">
+                  <a class="nav-link" id="cart-tab" data-toggle="tab" href="#cart" role="tab" aria-controls="cart" aria-selected="false">
+                    <img src="assets/images/icons/cart.svg" loading="lazy" alt="" />
+
+                    <span>
+                     مشترياتي 
+                    </span>
+                  </a>
+                </li>
+
+                <li class="nav-item" role="presentation">
+                  <a class="nav-link" href="add-product.html">
+                    <img src="assets/images/icons/cash.svg" loading="lazy" alt="" />
+
+                    <span>
+                      بيع الان 
+                    </span>
+                  </a>
+                </li>
+
+                <li class="nav-item" role="presentation">
+                  <a class="nav-link" id="notification-tab" data-toggle="tab" href="#notification" role="tab" aria-controls="notification" aria-selected="false">
+                    <img src="assets/images/icons/notification.svg" loading="lazy" alt="" />
+
+                    <span>
+                     الاشعارات 
+                    </span>
+                  </a>
+                </li>
+
+                <li class="nav-item" role="presentation">
+                  <a class="nav-link" id="products-tab" data-toggle="tab" href="#products" role="tab" aria-controls="products" aria-selected="false">
+                    <img src="assets/images/form/frame.svg" loading="lazy" alt="" />
+
+                    <span>
+                      منتجاتي
+                    </span>
+                  </a>
+                </li>
+
+                <li class="nav-item" role="presentation">
+                  <a class="nav-link" id="buyer-tab" data-toggle="tab" href="#buyer" role="tab" aria-controls="buyer" aria-selected="false">
+                    <img src="assets/images/icons/product.svg" loading="lazy" alt="" />
+
+                    <span>
+                      عروض للشراء 
+                    </span>
+                  </a>
+                </li>
+
+                <li class="nav-item" role="presentation">
+                  <a class="nav-link" id="sale-tab" data-toggle="tab" href="#sale" role="tab" aria-controls="sale" aria-selected="false">
+                    <img src="assets/images/icons/sale.svg" loading="lazy" alt="" />
+
+                    <span>
+                      عروض المشترين 
+                    </span>
+                  </a>
+                </li>
+
+                <li class="nav-item" role="presentation">
+                  <a class="nav-link" id="favorite-tab" data-toggle="tab" href="#favorite" role="tab" aria-controls="favorite" aria-selected="false">
+                    <img src="assets/images/icons/heart.svg" loading="lazy" alt="" />
+
+                    <span>
+                      المفضلة
+                    </span>
+                  </a>
+                </li>
+
+                <li class="nav-item" role="presentation">
+                  <a class="nav-link" id="question-tab" data-toggle="tab" href="#question" role="tab" aria-controls="question" aria-selected="false">
+                    <img src="assets/images/icons/question.svg" loading="lazy" alt="" />
+
+                    <span>
+                      اسئلتي 
+                    </span>
+                  </a>
+                </li>
+
+                <li class="nav-item" role="presentation">
+                  <a class="nav-link" href="#">
+                    <img src="assets/images/Logout.svg" loading="lazy" alt="" />
+
+                    <span>
+                      تسجيل خروج
+                    </span>
+                  </a>
+                </li>
+              </ul>
+            </div>
+
+            <div class="col-lg-3 col-12 mb-4 mobile-hidden">
               <div class="profile-card">
                 <div class="image-content">
                   <img src="assets/images/man.png" loading="lazy" alt="" />
